--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,7 +32,8 @@ r.PostProcessing.PropagateAlpha=False
 r.UsePreExposure=False
 r.CustomDepthTemporalAAJitter=False
 r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.AntiAliasing=1
+r.DefaultFeature.AntiAliasing=2
+r.GenerateMeshDistanceFields=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
